donation form creation + btn update + header modif

--- a/my-app/src/components/banner/banner.scss
+++ b/my-app/src/components/banner/banner.scss
@@ -41,7 +41,7 @@
     position: center;
     size: cover;
     repeat: no-repeat;
-    color: rgba($color-black, 0.2);
+    color: rgba($primary-color, 0.2);
   }
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 
