--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -168,6 +168,26 @@ table {
   outline: inherit;
 }
 
+.btn {
+  padding: 10px 20px 10px 20px;
+  border-radius: 25px;
+  color: $color-black;
+  cursor: pointer;
+  border: 0;
+  border-radius: 3rem;
+  background-image: linear-gradient(131deg, #ffd340, #ff923c, #ff923c, #ff923c);
+  background-size: 300% 100%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+  rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    box-shadow: 0 0.5em 0.5em -0.4em #ff923cba;
+    background-size: 100% 100%;
+    transform: translateY(-0.15em);
+  }
+}
+
 main {
   display: flex;
   justify-content: center;
