--- a/my-app/src/pages/donation/donation.scss
+++ b/my-app/src/pages/donation/donation.scss
@@ -8,6 +8,10 @@
       text-align: center;
     }
 
+    h3 {
+      margin-bottom: 50px;
+    }
+
     p {
       margin-bottom: 50px;
       text-align: justify;
@@ -17,34 +21,8 @@
       justify-content: space-evenly;
     }
 
-    .btn {
-      &--navigate {
-        margin-top: 50px;
-        background-color: $light-color;
-        border: 2px solid $dark-color;
-        border-radius: 30px;
-        box-shadow: $accent-color 4px 4px 0 0;
-        cursor: pointer;
-        display: inline-block;
-        font-weight: 600;
-        font-size: 18px;
-        padding: 0 18px;
-        line-height: 50px;
-        text-align: center;
-        text-decoration: none;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
-
-        &:hover {
-          background-color: #fff;
-        }
-
-        &:active {
-          box-shadow: #422800 2px 2px 0 0;
-          transform: translate(2px, 2px);
-        }
-      }
+    .btn--donate {
+      margin: 50px;
     }
   }
 }
