--- a/my-app/src/pages/donationform/donationform.scss
+++ b/my-app/src/pages/donationform/donationform.scss
@@ -2,171 +2,473 @@
 @import "../../sass-utils/variables.scss";
 
 @media print {
+  // print form layout
+  html,
   body {
-    width: 1224px;
-    aspect-ratio: 21 / 29.7;
+    width: 210mm;
+    height: 297mm;
+    margin: 0;
+  }
 
-    header {
-      display: none;
-    }
+  header {
+    display: none;
+  }
 
-    #donationform {
-      width: auto;
-      padding-bottom: 0;
+  footer {
+    display: none;
+    visibility: hidden;
+    height: 0;
+  }
 
-      .container {
+  #donationform {
+    width: 100%;
+    padding-bottom: 0;
+
+    .container {
+      width: 100%;
+
+      .form-container {
+        flex-direction: column;
+        align-items: center;
         width: 100%;
+        height: 100%;
 
-        .form-container {
-          width: 100%;
-          height: 100%;
+        .frame {
+          width: 80%;
+          height: auto;
+          border: solid 1px $accent-color;
+          flex-direction: column;
+          align-items: center;
+          margin: 10% 0 1% 0;
+
+          &__logo {
+            height: 35mm;
+            margin-top: 2%;
+
+            img {
+              height: 100%;
+            }
+          }
+
+          h1 {
+            margin-top: 6%;
+            text-align: center;
+          }
+
+          h2 {
+            margin-top: 4%;
+            text-align: center;
+          }
+
+          &__columns {
+            justify-content: space-around;
+            width: 100%;
+            margin-top: 10%;
+            margin-bottom: 2%;
+
+            &__contact {
+              width: auto;
+
+              &__row {
+                display: flex;
+
+                span {
+                  margin-right: 2mm;
+                  text-decoration: underline;
+                }
+              }
+            }
+          }
         }
+        .form {
+          width: 80%;
+          display: flex;
+          flex-direction: column;
+          margin-top: 3%;
 
-        .btn {
-          display: none;
+          input {
+            border: none;
+            border-bottom: 1px dotted $color-black;
+            font-size: 15px;
+          }
+
+          input[type="radio"],
+          input[type="checkbox"] {
+            //space between radio or checkbox and text
+            margin-right: 3mm;
+          }
+
+          input[type="date"]:required:invalid::-webkit-datetime-edit {
+            color: transparent;
+          }
+
+          input[type="date"]:focus::-webkit-datetime-edit {
+            color: black !important;
+          }
+
+          input[type="number"] {
+            -moz-appearance: textfield;
+
+            &::-webkit-outer-spin-button,
+            &::-webkit-inner-spin-button {
+              -webkit-appearance: none;
+              margin: 0;
+            }
+          }
+
+          &__block {
+            display: flex;
+            padding: 1.5mm 0 1.5mm 0;
+
+            &:nth-child(1) {
+              justify-content: space-between;
+            }
+
+            &:nth-child(2) {
+              display: none;
+
+              &.active {
+                display: flex;
+
+                label {
+                  flex: 0 0 auto;
+                  display: flex;
+                  width: 100%;
+
+                  input {
+                    flex: 1 1 auto;
+                  }
+                }
+              }
+            }
+
+            &:nth-child(3) {
+              display: none;
+
+              &.active {
+                display: flex;
+
+                input {
+                  width: 30mm;
+                }
+              }
+            }
+
+            &:nth-child(4) {
+              label {
+                &:nth-child(1) {
+                  margin-right: 10mm;
+                  input {
+                    width: 55mm;
+                  }
+                }
+
+                &:nth-child(2) {
+                  flex: 1 1 auto;
+                  display: flex;
+                  input {
+                    flex: 1 1 auto;
+                  }
+                }
+              }
+            }
+
+            &:nth-child(5) {
+              input {
+                width: 50mm;
+              }
+            }
+
+            &:nth-child(6) {
+              input {
+                width: 40mm;
+              }
+            }
+
+            &:nth-child(7) {
+              input {
+                width: 100mm;
+              }
+            }
+
+            &:nth-child(8) {
+              label {
+                flex: 0 0 auto;
+                display: flex;
+                width: 100%;
+
+                input {
+                  flex: 1 1 auto;
+                }
+              }
+            }
+
+            &:nth-child(9) {
+              label {
+                &:nth-child(1) {
+                  margin-right: 10mm;
+                  input {
+                    width: 30mm;
+                  }
+                }
+
+                &:nth-child(2) {
+                  flex: 1 1 auto;
+                  display: flex;
+                  input {
+                    flex: 1 1 auto;
+                  }
+                }
+              }
+            }
+
+            &:nth-child(10) {
+              input {
+                width: 43.1mm;
+              }
+            }
+
+            &:nth-child(11) {
+              justify-content: flex-end;
+              font-weight: bold;
+              margin-bottom: 15mm;
+
+              input {
+                width: 20mm;
+                text-align: center;
+              }
+            }
+          }
         }
       }
-    }
 
-    .footer {
-      display: none;
+      .btn {
+        display: none;
+      }
     }
   }
 }
 
-#donationform {
-  .form-container {
-    flex-direction: column;
-    align-items: center;
-    width: 1224px;
-    aspect-ratio: 21 / 29.7;
-
-    .frame {
-      width: 1000px;
-      height: 700px;
-      border: solid 1px $accent-color;
+@include large-desktop-layout {
+  #donationform {
+    .form-container {
       flex-direction: column;
       align-items: center;
-      margin: 100px 0 10px 0;
+      width: 1224px;
 
-      &__logo {
-        aspect-ratio: 3 / 2;
-        height: 200px;
-        background: {
-          position: center;
-          size: cover;
+      .frame {
+        width: 1000px;
+        height: 700px;
+        border: solid 1px $accent-color;
+        flex-direction: column;
+        align-items: center;
+        margin: 100px 0 10px 0;
+
+        &__logo {
+          height: 200px;
+          margin-top: 20px;
+
+          img {
+            height: 100%;
+          }
         }
-        margin-top: 20px;
-      }
 
-      h1 {
+        h1 {
+          margin-top: 50px;
+          text-align: center;
+        }
+
+        h2 {
+          margin-top: 30px;
+          text-align: center;
+        }
+
+        &__columns {
+          justify-content: space-around;
+          width: 100%;
+          margin-top: 100px;
+
+          &__contact {
+            width: auto;
+
+            &__row {
+              display: flex;
+
+              span {
+                margin-right: 10px;
+                text-decoration: underline;
+              }
+            }
+          }
+        }
+      }
+      .form {
+        width: 1000px;
+        display: flex;
+        flex-direction: column;
         margin-top: 50px;
-        text-align: center;
-      }
 
-      h2 {
-        margin-top: 30px;
-        text-align: center;
-      }
+        input {
+          border: none;
+          border-bottom: 1px dotted $color-black;
+          font-size: 20px;
+        }
 
-      &__columns {
-        justify-content: space-around;
-        width: 100%;
-        margin-top: 100px;
+        input[type="radio"],
+        input[type="checkbox"] {
+          //space between radio or checkbox and text
+          margin-right: 20px;
+        }
 
-        &__contact {
-          width: auto;
+        input[type="date"]:required:invalid::-webkit-datetime-edit {
+          color: transparent;
+        }
 
-          &__row {
-            display: flex;
+        input[type="date"]:focus::-webkit-datetime-edit {
+          color: black !important;
+        }
 
-            span {
-              margin-right: 10px;
-              text-decoration: underline;
+        input[type="number"] {
+          -moz-appearance: textfield;
+
+          &::-webkit-outer-spin-button,
+          &::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+          }
+        }
+
+        &__block {
+          display: flex;
+          padding: 12px 0 12px 0;
+
+          &:nth-child(1) {
+            justify-content: space-between;
+          }
+
+          &:nth-child(2) {
+            display: none;
+
+            &.active {
+              display: flex;
+
+              label {
+                flex: 0 0 auto;
+                display: flex;
+                width: 100%;
+
+                input {
+                  flex: 1 1 auto;
+                }
+              }
+            }
+          }
+
+          &:nth-child(3) {
+            display: none;
+
+            &.active {
+              display: flex;
+
+              input {
+                width: 200px;
+              }
+            }
+          }
+
+          &:nth-child(4) {
+            label {
+              &:nth-child(1) {
+                margin-right: 50px;
+
+                input {
+                  width: 250px;
+                }
+              }
+
+              &:nth-child(2) {
+                flex: 1 1 auto;
+                display: flex;
+
+                input {
+                  flex: 1 1 auto;
+                }
+              }
+            }
+          }
+
+          &:nth-child(5) {
+            input {
+              width: 150px;
+            }
+          }
+
+          &:nth-child(6) {
+            input {
+              width: 200px;
+            }
+          }
+
+          &:nth-child(7) {
+            input {
+              width: 400px;
+            }
+          }
+
+          &:nth-child(8) {
+            label {
+              flex: 0 0 auto;
+              display: flex;
+              width: 100%;
+
+              input {
+                flex: 1 1 auto;
+              }
+            }
+          }
+
+          &:nth-child(9) {
+            label {
+              &:nth-child(1) {
+                margin-right: 50px;
+                input {
+                  width: 200px;
+                }
+              }
+
+              &:nth-child(2) {
+                flex: 1 1 auto;
+                display: flex;
+                input {
+                  flex: 1 1 auto;
+                }
+              }
+            }
+          }
+
+          &:nth-child(10) {
+            input {
+              width: 300px;
+            }
+          }
+
+          &:nth-child(11) {
+            justify-content: flex-end;
+            font-weight: bold;
+            margin-bottom: 100px;
+
+            input {
+              width: 150px;
+              text-align: center;
             }
           }
         }
       }
     }
-    .form {
-      width: 1000px;
-      display: flex;
-      flex-direction: column;
+
+    .btn--print {
       margin-top: 50px;
-
-      input {
-        border: none;
-        border-bottom: 1px dotted $color-black;
-        font-size: 20px;
-      }
-
-      &__block {
-        display: flex;
-        padding: 12px 0 12px 0;
-
-        &:nth-child(1) {
-          justify-content: space-between;
-        }
-
-        &:nth-child(2) {
-          display: none;
-          &.active {
-            display: flex;
-          }
-        }
-
-        &:nth-child(3) {
-          label {
-            &:nth-child(1) {
-              margin-right: 50px;
-            }
-            input {
-              width: 250px;
-            }
-          }
-        }
-
-        &:nth-child(4) {
-          input {
-            width: calc(1000px - 89px);
-          }
-        }
-
-        &:nth-child(5) {
-          label {
-            &:nth-child(1) {
-              margin-right: 50px;
-              input {
-                width: 200px;
-              }
-            }
-
-            &:nth-child(2) {
-              input {
-                width: 400px;
-              }
-            }
-          }
-        }
-
-        &:nth-child(6) {
-          input {
-            width: 300px;
-          }
-        }
-
-        &:nth-child(7) {
-          input {
-            width: 200px;
-          }
-        }
-
-        &:nth-child(8) {
-          input {
-            width: 400px;
-          }
-        }
-      }
+      float: right;
     }
   }
 }
