--- a/my-app/src/pages/home/index.scss
+++ b/my-app/src/pages/home/index.scss
@@ -140,71 +140,75 @@
     .news-container {
       margin-top: 100px;
 
-      ul > li {
-        .progressBar {
-          flex-direction: column;
-          margin: 0 100px 0 30px;
+      ul {
+        flex-direction: column-reverse;
+        & > li {
+          .progressBar {
+            flex-direction: column;
+            margin: 0 100px 0 30px;
 
-          &__dot {
-            height: $dotWidth;
-            width: $dotWidth;
-            background-color: $dark-color;
-            border-radius: 50%;
-            position: relative;
-
-            &__top,
-            &__bottom {
-              position: absolute;
-              width: 5px;
-              height: calc(200px);
+            &__dot {
+              height: $dotWidth;
+              width: $dotWidth;
               background-color: $dark-color;
-              left: 50%;
-              transform: translateX(-50%);
-            }
+              border-radius: 50%;
+              position: relative;
 
-            &__top {
-              top: calc(-1 * 200px + $dotWidth);
-            }
+              &__top,
+              &__bottom {
+                position: absolute;
+                width: 5px;
+                height: calc(200px);
+                background-color: $dark-color;
+                left: 50%;
+                transform: translateX(-50%);
+              }
 
-            &__bottom {
-              bottom: calc(-1 * 200px + $dotWidth);
+              &__top {
+                top: calc(-1 * 200px + $dotWidth);
+              }
+
+              &__bottom {
+                bottom: calc(-1 * 200px + $dotWidth);
+              }
             }
           }
-        }
 
-        .news {
-          background-color: $secondary-color;
-          justify-content: space-between;
-          width: 900px;
-          overflow: hidden;
-          border-radius: 5px;
-          border: 12px groove $accent-color;
-          box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-
-          &__image {
-            height: 300px;
-            width: 250px;
+          .news {
+            background-color: $secondary-color;
+            justify-content: space-between;
+            width: 900px;
+            margin: 20px 0 20px 0;
             overflow: hidden;
-            background-position: center;
-            background-size: contain;
-            box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-          }
+            border-radius: 5px;
+            border: 12px groove $accent-color;
+            box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 
-          &__text {
-            width: calc(100% - 290px);
-            max-height: 250px;
-            padding: 20px;
-
-            h4 {
-              text-align: center;
-              padding: 10px;
-              font-size: 30px;
-              color: $accent-color;
+            &__image {
+              height: 300px;
+              width: 250px;
+              overflow: hidden;
+              background-position: center;
+              background-size: contain;
+              box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
             }
 
-            p {
-              text-align: justify;
-              width: 100%;
+            &__text {
+              width: calc(100% - 290px);
+              max-height: 250px;
+              padding: 20px;
+
+              h4 {
+                text-align: center;
+                padding: 10px;
+                font-size: 30px;
+                color: $accent-color;
+              }
+
+              p {
+                text-align: justify;
+                width: 100%;
+              }
             }
           }
         }
