--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -121,6 +121,14 @@ q {
   quotes: none;
 }
 
+b{
+  font-weight: bold;
+}
+
+i{
+  font-style: italic;
+}
+
 blockquote:before,
 blockquote:after,
 q:before,
