--- a/my-app/src/pages/history/history.scss
+++ b/my-app/src/pages/history/history.scss
@@ -1,18 +1,6 @@
 @import "../../sass-utils/mixins.scss";
 @import "../../sass-utils/variables.scss";
 
-@keyframes show {
-  0% {
-    height: 0;
-  }
-  50% {
-    height: 100px;
-  }
-  100% {
-    height: auto;
-  }
-}
-
 #history {
   .parent {
     width: 100%;
@@ -84,44 +72,21 @@
     .article {
       display: none;
       position: relative;
-      border-radius: 5rem;
       overflow: hidden;
-      margin-top: 0;
 
       .section {
         margin-top: 0;
         &__textarea {
           &__title {
-            border-bottom: solid 3px $accent-color;
-            background: linear-gradient(180deg, $dark-color 0%, $primary-color 60%);
             flex-direction: column;
+            text-align: center;
+            margin-bottom: 30px;
+            padding: 40px 0 15px 0;
+            border-bottom: solid 1px $accent-color;
           }
 
           &__paragraph {
-            height: 0;
             overflow: hidden;
-            z-index: -1;
-
-            &.show {
-              animation: show 0.7s ease both;
-            }
-          }
-
-          .toggle-btn {
-            position: absolute;
-            justify-content: space-evenly;
-            align-items: center;
-            color: $color-white;
-            border-radius: 25px;
-            cursor: pointer;
-            background-image: linear-gradient(131deg, $dark-color, $primary-color, $light-color);
-            background-size: 300% 100%;
-            transition: all 0.3s ease-in-out;
-
-            &:hover:enabled {
-              box-shadow: 0 0.5em 0.5em -0.4em $light-color;
-              background-size: 100% 100%;
-            }
           }
         }
       }
@@ -148,6 +113,10 @@
 
       &__picture {
         width: 100%;
+      }
+      
+      &:hover {
+        transform: scale(1.1);
       }
     }
   }
@@ -214,16 +183,6 @@
 
             &__paragraph {
               padding: 0 5rem 0 5rem;
-            }
-
-            .toggle-btn {
-              bottom: 40px;
-              right: 50%;
-              transform: translateX(50%);
-              width: 115px;
-              height: 40px;
-              font-size: 15px;
-              font-weight: 700;
             }
           }
         }
