--- a/my-app/src/sass-utils/variables.scss
+++ b/my-app/src/sass-utils/variables.scss
@@ -21,7 +21,7 @@ $parentHeight: $parentBase * 70vh;
 $parentMaxWidth: 1224px;
 $parentMaxHeight: 70vh;
 $dotWidth: 25px;
-$active: $dark-color;
+$active: $accent-color;
 $inactive: $light-color;
 
 $raised: 5000;
