--- a/my-app/src/pages/home/index.scss
+++ b/my-app/src/pages/home/index.scss
@@ -16,7 +16,6 @@
   }
 
   .gallery {
-    padding: 2px;
     transition: 0.3s;
 
     &:hover .gallery__column__card__thumb__image {
@@ -24,10 +23,8 @@
     }
 
     &__column {
-      display: flex;
-      flex-direction: column;
-
       &__card {
+        overflow: hidden;
         &:hover {
           cursor: pointer;
 
@@ -36,6 +33,7 @@
           }
 
           .gallery__column__card__thumb__caption {
+            transform: translate(-50%, -50px) scale(1.1);
             opacity: 1;
           }
         }
@@ -49,23 +47,23 @@
             transition: 0.3s;
 
             &:hover {
-              transform: scale(1.2);
+              transform: scale(1.1);
             }
           }
 
           &__caption {
             position: absolute;
-            bottom: 0;
+            bottom: -50px;
             left: 50%;
-            transform: translatex(-50%);
-            padding: 25px 15px 15px;
+            transform: translateX(-50%);
+            padding: 15px 0;
             width: 100%;
             font-family: "Raleway", sans-serif;
             font-size: 16px;
             color: white;
             opacity: 0;
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 100%);
-            transition: 0.3s;
+            transition: 0.5s;
           }
         }
       }
@@ -136,7 +134,6 @@
 
         &__card {
           margin: 5px;
-          overflow: hidden;
           &__thumb {
             box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
           }
@@ -287,6 +284,28 @@
 }
 
 @include small-desktop-layout {
+  #home {
+    .gallery {
+      flex-direction: column;
+  
+      &__column {
+        flex-direction: row;
+        justify-content: space-around;
+        margin: -40px 0;
+  
+        &__card {
+          width: calc(100% / 3);
+          &:hover {
+            cursor: pointer;
+  
+            .gallery__column__card__thumb__caption {
+              transform: translate(-50%, -50px) scale(1.1);
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 @include mobile-layout {
@@ -319,7 +338,8 @@
 
       &__column {
         flex-direction: row;
-        width: 100%;
+        justify-content: space-around;
+        margin: -20px 0;
 
         &__card {
           margin: 10px;
@@ -327,7 +347,7 @@
 
           &__thumb {
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-            border-radius: 10px;
+            border-radius: 5px;
             overflow: hidden;
           }
         }
