--- a/my-app/src/sass-utils/mixins.scss
+++ b/my-app/src/sass-utils/mixins.scss
@@ -62,3 +62,40 @@
     }
   }
 }
+
+@mixin btn--donate {
+  position: relative;
+  text-decoration: none;
+  background: $accent-color;
+  background-position: 0 0;
+  background-size: 200% 100%;
+  border-radius: 10px;
+  color: #fff;
+  padding: 15px 65px 15px 15px;
+  text-shadow: 1px 1px 5px #666;
+  -webkit-transition: all 800ms;
+  transition: all 800ms;
+
+  .icon {
+    border-left: 1px solid darken($accent-color, 5%);
+    color: darken($accent-color, 10%);
+    font-size: 20px;
+    padding: 10px 0;
+    padding-left: 15px;
+    position: absolute;
+    right: 16px;
+    top: 7px;
+    -webkit-transition: all 600ms 200ms;
+    transition: all 600ms 200ms;
+  }
+
+  &:hover {
+    background-position: -100% 0;
+
+    .icon {
+      border-left: 1px solid lighten($accent-color, 5%);
+      color: #fff;
+      text-shadow: 0 0 10px #000;
+    }
+  }
+}
